# INTEL2020project

./: .gitignore  main.cpp  myThread.cpp  myThread.hpp
Demo/samples/xtts_offline_sample/: Makefile  xtts_offline_sample.h
P2P/: p2p.cpp  p2p.hpp
P2P_TCP/: p2p.cpp  p2p_Station.py  p2p_TCPserver.py
P2P_TCP/test/: Makefile  TCPserver.py  client.cpp  station.py
P2P_transfer/: Makefile  TCPserverTest.py  UDPserverTest.py  clientTest.cpp  p2p.cpp  p2p.hpp  p2p_TCPserver.py  p2p_UDPserver.py  p2p_station.py  stationTest.py
groundStation/: dataTransform.py  main.py  p2p.py  recvImg.py
landmarkdetectfinal/: CMakeLists.txt  detect.py  detection.cpp  detection.h  estimate.cpp  estimate.h  final.cpp  final.h
test/: Makefile  clientTest.cpp  flowServerTest.py  p2p.py  serverTest.cpp  stationTest.py
worker/: Makefile  main.cpp  myThread.cpp  myThread.hpp  workerTest
worker/Demo/samples/xtts_offline_sample/: xtts_offline_sample.c  xtts_offline_sample.h
worker/cameraGetImage/: cameraGetImage.h  cameraGetImageSource.cpp
worker/mainThread/: workerMain.cpp
